fixed project tree messing up when there was too much content in details tab

--- a/app/webroot/css/green/style.css
+++ b/app/webroot/css/green/style.css
@@ -195,7 +195,7 @@ ol li
 #column2
 { text-align: justify;
   padding: 0px 0px 15px 20px;
-  margin: 0px 270px 0px 0px;
+  margin: 0px 0px 0px 0px;
 }
 
 #column2 h1
